--- a/configure.ac
+++ b/configure.ac
@@ -196,6 +196,13 @@ AC_CHECK_HEADER([linux/kvm.h],[HAVE_LINUX_KVM_H=1],[HAVE_LINUX_KVM_H=0])
 AM_CONDITIONAL([HAVE_LINUX_KVM_H],[test x$HAVE_LINUX_KVM_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_LINUX_KVM_H],[$HAVE_LINUX_KVM_H],[Has linux/kvm.h])
 
+# Does Linux have sys/prctl.h?
+HAVE_SYS_PRCTL_H=0
+AC_SUBST(HAVE_SYS_PRCTL_H)
+AC_CHECK_HEADER([sys/prctl.h],[HAVE_SYS_PRCTL_H=1],[HAVE_SYS_PRCTL_H=0])
+AM_CONDITIONAL([HAVE_SYS_PRCTL_H],[test x$HAVE_SYS_PRCTL_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_SYS_PRCTL_H],[$HAVE_SYS_PRCTL_H],[Has sys/prctl.h])
+
 # X11
 HAVE_X11=0
 AC_ARG_WITH(x11,AS_HELP_STRING([--with-x11],[Enable X11 support]),[],[with_x11=yes])
