--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 AC_INIT([DOSBox-X-rewrite], 0.01)
 AM_INIT_AUTOMAKE
+AC_PROG_RANLIB
 AC_PROG_CC
 AC_PROG_CXX
 AC_CONFIG_HEADER([config.h])
@@ -15,6 +16,12 @@ POSIX_DEF=" -D_POSIX_C_SOURCE=200809L"
 CFLAGS+="$POSIX_DEF"
 CPPFLAGS+="$POSIX_DEF"
 CXXFLAGS+="$POSIX_DEF"
+
+# this code refers to itself
+SELFINCLUDE_DEF=" -I$srcdir"
+CFLAGS+="$SELFINCLUDE_DEF"
+CPPFLAGS+="$SELFINCLUDE_DEF"
+CXXFLAGS+="$SELFINCLUDE_DEF"
 
 # this code uses C++11 features (TODO: gnu++11 if GCC, else c++11)
 c11=0
