more header tests

--- a/configure.ac
+++ b/configure.ac
@@ -210,6 +210,34 @@ AC_CHECK_HEADER([sys/prctl.h],[HAVE_SYS_PRCTL_H=1],[HAVE_SYS_PRCTL_H=0])
 AM_CONDITIONAL([HAVE_SYS_PRCTL_H],[test x$HAVE_SYS_PRCTL_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_SYS_PRCTL_H],[$HAVE_SYS_PRCTL_H],[Has sys/prctl.h])
 
+# Does your compiler have mmintrin.h (MMX intrinsics)?
+HAVE_MMINTRIN_H=0
+AC_SUBST(HAVE_MMINTRIN_H)
+AC_CHECK_HEADER([mmintrin.h],[HAVE_MMINTRIN_H=1],[HAVE_MMINTRIN_H=0])
+AM_CONDITIONAL([HAVE_MMINTRIN_H],[test x$HAVE_MMINTRIN_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_MMINTRIN_H],[$HAVE_MMINTRIN_H],[Has mmintrin.h])
+
+# Does your compiler have xmmintrin.h (SSE intrinsics)?
+HAVE_XMMINTRIN_H=0
+AC_SUBST(HAVE_XMMINTRIN_H)
+AC_CHECK_HEADER([xmmintrin.h],[HAVE_XMMINTRIN_H=1],[HAVE_XMMINTRIN_H=0])
+AM_CONDITIONAL([HAVE_XMMINTRIN_H],[test x$HAVE_XMMINTRIN_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_XMMINTRIN_H],[$HAVE_XMMINTRIN_H],[Has xmmintrin.h])
+
+# Does your compiler have immintrin.h (AVX intrinsics)?
+HAVE_IMMINTRIN_H=0
+AC_SUBST(HAVE_IMMINTRIN_H)
+AC_CHECK_HEADER([immintrin.h],[HAVE_IMMINTRIN_H=1],[HAVE_IMMINTRIN_H=0])
+AM_CONDITIONAL([HAVE_IMMINTRIN_H],[test x$HAVE_IMMINTRIN_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_IMMINTRIN_H],[$HAVE_IMMINTRIN_H],[Has immintrin.h])
+
+# Does your compiler have avxintrin.h (AVX intrinsics)?
+HAVE_AVXINTRIN_H=0
+AC_SUBST(HAVE_AVXINTRIN_H)
+AC_CHECK_HEADER([avxintrin.h],[HAVE_AVXINTRIN_H=1],[HAVE_AVXINTRIN_H=0])
+AM_CONDITIONAL([HAVE_AVXINTRIN_H],[test x$HAVE_AVXINTRIN_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_AVXINTRIN_H],[$HAVE_AVXINTRIN_H],[Has avxintrin.h])
+
 # X11
 HAVE_X11=0
 AC_ARG_WITH(x11,AS_HELP_STRING([--with-x11],[Enable X11 support]),[],[with_x11=yes])
