--- a/configure.ac
+++ b/configure.ac
@@ -175,6 +175,32 @@ AC_TRY_LINK([#include <time.h>],
 AM_CONDITIONAL([HAVE_CLOCK_GETTIME],[test x$HAVE_CLOCK_GETTIME = 1])
 AC_DEFINE_UNQUOTED([HAVE_CLOCK_GETTIME],[$HAVE_CLOCK_GETTIME],[Has clock_gettime])
 
+# make sure the host CPU uses signed 2's complement integers.
+# x86 processors are 2's complement. additional work has to be done to emulate 2's complement if the host is not.
+HAVE_HOST_2S_COMPLEMENT=0
+AC_SUBST(HAVE_HOST_2S_COMPLEMENT)
+AC_MSG_CHECKING([that your host processor uses 2s complement format for signed integers])
+AC_TRY_LINK([ ],
+    [
+        /* 0xFF = -1  0x00 = 0  0x01 = 1   2's complement */
+        /* 0xFE = -1  0x00 = 0  0x01 = 1   1's complement */
+        /* 0x81 = -1  0x00 = 0  0x01 = 1   sign+magnitude */
+        char arr1[((signed char)0xFFU) == -1 ? 1 : -1];
+        char arr2[((unsigned char)-1) == 0xFFU ? 1 : -1];
+    ],
+    [
+        AC_MSG_RESULT([yes])
+        HAVE_HOST_2S_COMPLEMENT=1
+    ],
+    [
+        AC_MSG_RESULT([no])
+        old_CXXFLAGS=$CXXFLAGS
+        old_CFLAGS=$CFLAGS
+    ])
+AM_CONDITIONAL([HAVE_HOST_2S_COMPLEMENT],[test x$HAVE_HOST_2S_COMPLEMENT = 1])
+AC_DEFINE_UNQUOTED([HAVE_HOST_2S_COMPLEMENT],[$HAVE_HOST_2S_COMPLEMENT],[Has 2s complement host integer format])
+
+
 # Does Linux have sys/vm86.h for virtual 8086 mode?
 HAVE_SYS_VM86_H=0
 AC_SUBST(HAVE_SYS_VM86_H)
