--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,12 @@
 
 noinst_LIBRARIES = \
 	dosboxxr/lib/hostcpudetect/libhostcpudetect.a \
-	dosboxxr/lib/text/libtext.a
+	dosboxxr/lib/text/libtext.a \
+	dosboxxr/lib/cpu/libcpu.a
 
 dosboxxr_lib_hostcpudetect_libhostcpudetect_a_SOURCES = dosboxxr/lib/hostcpudetect/caps.cpp
+
+dosboxxr_lib_cpu_libcpu_a_SOURCES = dosboxxr/lib/cpu/ipdec_strings.cpp
 
 dosboxxr_lib_text_libtext_a_SOURCES = dosboxxr/lib/text/chomp.c
 
@@ -18,8 +21,10 @@ empty_SOURCES = empty.cpp
 
 cpudec86_SOURCES = cpudec86.cpp
 cpudec86_CXXFLAGS = $(AM_CXXFLAGS)
-cpudec86_DEPENDENCIES =
-cpudec86_LDADD =
+cpudec86_DEPENDENCIES = \
+	dosboxxr/lib/cpu/libcpu.a
+cpudec86_LDADD = \
+	dosboxxr/lib/cpu/libcpu.a
 
 cpudetect_SOURCES = cpudetect.cpp
 cpudetect_CXXFLAGS = $(AM_CXXFLAGS)
