--- a/Makefile.am
+++ b/Makefile.am
@@ -48,5 +48,8 @@ cpumemreftypes_LDADD =
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
 
-test-bins: test1.bin
+test2.bin: test2.asm
+	yasm -o $@ -f bin $<
+
+test-bins: test1.bin test2.bin
 
