split out opcodes. being able to #ifdef some, and #include others, will go a long way in developing the 286, 386, etc. cores.

--- a/Makefile.am
+++ b/Makefile.am
@@ -64,7 +64,7 @@ opcc$(EXEEXT): opcc.cpp
 	$(BUILD_CXX) -o $@ $<
 
 dosboxxr/lib/cpu/core/intel8088.opcodes.p: opcodes/intel8088.opcodes
-	$(BUILD_CPP) opcodes/intel8088.opcodes >$@
+	$(BUILD_CPP) -I. opcodes/intel8088.opcodes -o $@
 dosboxxr/lib/cpu/core/intel8088.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel8088.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel8088.opcodes.p -o $@ -m decompile
 
