--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,8 @@ cpumemreftypes_DEPENDENCIES =
 cpumemreftypes_LDADD =
 
 OPCC_H = \
-	dosboxxr/lib/cpu/core/intel8088.c16.a16.decom.h
+	dosboxxr/lib/cpu/core/intel8088.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intel80286.c16.a16.decom.h
 
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
@@ -67,6 +68,11 @@ dosboxxr/lib/cpu/core/intel8088.opcodes.p: opcodes/intel8088.opcodes
 	$(BUILD_CPP) -I. opcodes/intel8088.opcodes -o $@
 dosboxxr/lib/cpu/core/intel8088.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel8088.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel8088.opcodes.p -o $@ -m decompile
+
+dosboxxr/lib/cpu/core/intel80286.opcodes.p: opcodes/intel80286.opcodes
+	$(BUILD_CPP) -I. opcodes/intel80286.opcodes -o $@
+dosboxxr/lib/cpu/core/intel80286.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel80286.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80286.opcodes.p -o $@ -m decompile
 
 # grrr how do I get automake to run opcc first before compiling other parts?
 opcodes: $(OPCC_H)
