--- a/Makefile.am
+++ b/Makefile.am
@@ -49,7 +49,10 @@ cpumemreftypes_LDADD =
 OPCC_H = \
 	dosboxxr/lib/cpu/core/intel8088.c16.a16.decom.h \
 	dosboxxr/lib/cpu/core/intel80286.c16.a16.decom.h \
-	dosboxxr/lib/cpu/core/intel80386.c16.a16.decom.h
+	dosboxxr/lib/cpu/core/intel80386.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intel80386.c16.a32.decom.h \
+	dosboxxr/lib/cpu/core/intel80386.c32.a16.decom.h \
+	dosboxxr/lib/cpu/core/intel80386.c32.a32.decom.h
 
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
@@ -78,7 +81,13 @@ dosboxxr/lib/cpu/core/intel80286.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel802
 dosboxxr/lib/cpu/core/intel80386.opcodes.p: opcodes/intel80386.opcodes
 	$(BUILD_CPP) -I. opcodes/intel80386.opcodes -o $@
 dosboxxr/lib/cpu/core/intel80386.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel80386.opcodes.p opcc$(EXEEXT)
-	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile -c 16 -a 16
+dosboxxr/lib/cpu/core/intel80386.c16.a32.decom.h: dosboxxr/lib/cpu/core/intel80386.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile -c 16 -a 32
+dosboxxr/lib/cpu/core/intel80386.c32.a16.decom.h: dosboxxr/lib/cpu/core/intel80386.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile -c 32 -a 16
+dosboxxr/lib/cpu/core/intel80386.c32.a32.decom.h: dosboxxr/lib/cpu/core/intel80386.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80386.opcodes.p -o $@ -m decompile -c 32 -a 32
 
 # grrr how do I get automake to run opcc first before compiling other parts?
 opcodes: $(OPCC_H)
